Arreglos en los detalles

--- a/detail-series.html
+++ b/detail-series.html
@@ -44,18 +44,21 @@
             </li>
         </ul>
     </header>
+
+
+
     <main>
         <div>
             <h2 class="detalles">DETALLES DE SERIES</h2>
         </div>
         <section class="sectionpadre">
-            <article class="serieprincipal">
+            <article class="peliculaprincipal">
                 <h3 class="titulosdetalles"></h3>
                 <h4 class="duracion"></h4>
                 <img class="imagen" src="" alt="">
                 <div class="botonfavorito">
                     <div class="letrasfavorito">
-                        <a class="favorito" href="./favoritos.html">AÑADIR A FAVORITOS❤️</a>
+                        <a class="botonFavoritos" href="./favoritos.html">AÑADIR A FAVORITOS❤️</a>
                     </div>
                 </div>
             </article>
@@ -67,9 +70,9 @@
                 <h4 class="calificacion">Calificación</h4>
                 <p class="puntuacion"></p>
                 <h4>
-                    <a class="generoSinSub" id=href="./genres.html">Género:</a>
+                    <a class="generoSinSub" href="./genres.html">Género:</a>
                 </h4>
-                <p class="puntuacion"><a href="./detail-genres.html" class="colorLetraGenero"> </a></p>
+                <p class="puntuacion"><a href="./detail-genres.html" id="genero" class="colorLetraGenero"> </a></p>
 
                 <h4 class="estreno">Fecha de Estreno</h4>
                 <p class="estreno"></p>
