--- a/detail-series.html
+++ b/detail-series.html
@@ -44,9 +44,6 @@
             </li>
         </ul>
     </header>
-
-
-
     <main>
         <div>
             <h2 class="detalles">DETALLES DE SERIES</h2>
@@ -55,7 +52,7 @@
             <article class="peliculaprincipal">
                 <h3 class="titulosdetalles"></h3>
                 <h4 class="duracion"></h4>
-                <img class="imagen" src="" alt="">
+                <img class="imagen" src="" alt=" ">
                 <div class="botonfavorito">
                     <div class="letrasfavorito">
                         <a class="botonFavoritos" href="./favoritos.html">AÑADIR A FAVORITOS❤️</a>
@@ -66,40 +63,75 @@
                 <h4 class="sinopsis">Sínopsis:</h4>
                 <p class="informacion">
                 </p>
-
-                <h4 class="calificacion">Calificación</h4>
+                <h4 class="calificacion">Calificación:</h4>
                 <p class="puntuacion"></p>
                 <h4>
                     <a class="generoSinSub" href="./genres.html">Género:</a>
                 </h4>
-                <p class="puntuacion"><a href="./detail-genres.html" id="genero" class="colorLetraGenero"> </a></p>
-
-                <h4 class="estreno">Fecha de Estreno</h4>
+                <p class="puntuacion"><a href="./genres.html" id="genero" class="colorLetraGenero"></a></p>
+                <h4 class="estreno">Fecha de Estreno:</h4>
                 <p class="estreno"></p>
             </article>
-            <script>src="./js/detail-serie.js"</script>
         </section>
-    </main>
-    <footer>
-        <section>
-            <ul type="none" class="footer">
-                <li class="nombres">
-                    <h4>Roberto Arellano</h4>
-                    <a class="gmail" href="mailto:rarellanochoque@udes.edu.ar">rarellanochoque@udes.edu.ar</a>
-                </li>
-                <li class="nombres">
-                    <h4>Martiniano Sanchez</h4>
-                    <a class="gmail" href="mailto:martinianosanchez@udesa.edu.ar">martinianosanchez@udesa.edu.ar</a>
-                </li>
-                <li class="nombres">
-                    <h4>Bonifacio Lastra</h4>
-                    <a class="gmail" href="mailto:blastra@udesa.edu.ar">blastra@udesa.edu.ar</a>
-                </li>
-            </ul>
-            
-        </section>
-    </footer>
+
+
+        <footer>
+            <section>
+                <ul type="none" class="footer">
+                    <li class="nombres">
+                        <h4>Roberto Arellano</h4>
+                        <a class="gmail" href="mailto:rarellanochoque@udes.edu.ar">rarellanochoque@udes.edu.ar</a>
+                    </li>
+                    <li class="nombres">
+                        <h4>Martiniano Sanchez</h4>
+                        <a class="gmail" href="mailto:martinianosanchez@udesa.edu.ar">martinianosanchez@udesa.edu.ar</a>
+                    </li>
+                    <li class="nombres">
+                        <h4>Bonifacio Lastra</h4>
+                        <a class="gmail" href="mailto:blastra@udesa.edu.ar">blastra@udesa.edu.ar</a>
+                    </li>
+                </ul>
+
+            </section>
+        </footer>
 </body>
 <script src="./js/detail-serie.js"></script>
 <script src="./js/lista-favoritos.js"></script>
+
 </html>
+
+
+
+
+<main>
+    <div>
+        <h2 class="detalles">DETALLES DE SERIES</h2>
+    </div>
+    <section class="sectionpadre">
+        <article class="peliculaprincipal">
+            <h3 class="titulosdetalles"></h3>
+            <h4 class="duracion"></h4>
+            <img class="imagen" src="" alt="">
+            <div class="botonfavorito">
+                <div class="letrasfavorito">
+                    <a class="botonFavoritos" href="./favoritos.html">AÑADIR A FAVORITOS❤️</a>
+                </div>
+            </div>
+        </article>
+        <article class="cajadatos">
+            <h4 class="sinopsis">Sínopsis:</h4>
+            <p class="informacion">
+            </p>
+
+            <h4 class="calificacion">Calificación</h4>
+            <p class="puntuacion"></p>
+            <h4>
+                <a class="generoSinSub" href="./genres.html">Género:</a>
+            </h4>
+            <p class="puntuacion"><a href="./detail-genres.html" id="genero" class="colorLetraGenero"> </a></p>
+
+            <h4 class="estreno">Fecha de Estreno</h4>
+            <p class="estreno"></p>
+        </article>
+    </section>
+</main>
