--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </h1>
         <form action="./search-results.html" method="GET" class="buscador">
             <div>
-                <input class="input"  type="text" name="buscar" placeholder="Buscar..">
+                <input class="buscar"  type="text" name="buscar" placeholder="Buscar.." value="">
             </div>
             <div>
                 <button type="submit" class="boton">
