--- a/search-results.html
+++ b/search-results.html
@@ -13,7 +13,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Bebas+Neue&family=Commissioner:wght@100;500&family=Luckiest+Guy&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Bangers&family=Bebas+Neue&family=Commissioner:wght@100;500&family=Luckiest+Guy&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -23,7 +25,7 @@
         </h1>
         <form action="./search-results.html" method="GET" class="buscador">
             <div>
-                <input type="text" name="buscar" placeholder="Buscar..">
+                <input class="buscar" type="text" name="buscar" placeholder="Buscar..">
             </div>
             <div>
                 <button type="submit" class="boton">
@@ -44,11 +46,8 @@
         </ul>
     </header>
     <main>
-        <section>
-
-
-
-
+        <section class=primerasection id="sectionBuscador" >
+           
         </section>
 
 
@@ -71,7 +70,7 @@
             </ul>
         </section>
     </footer>
-
+<script src="./js/search-results.js"></script>
 </body>
 
 </html>
