Arreglos al buscador

--- a/detail-genres.html
+++ b/detail-genres.html
@@ -23,7 +23,7 @@
         </h1>
         <form action="./search-results.html" method="GET" class="buscador">
             <div>
-                <input type="text" name="buscar" placeholder="Buscar..">
+                <input class="buscar" type="text" name="buscar" placeholder="Buscar..">
             </div>
             <div>
                 <button type="submit" class="boton">
@@ -182,6 +182,7 @@
             </ul>
         </section>
     </footer>
+    <script src="./js/formularios.js" ></script>
 </body>
 
 </html>
