--- a/favoritos.html
+++ b/favoritos.html
@@ -24,7 +24,7 @@
         </h1>
         <form action="./search-results.html" method="GET" class="buscador">
             <div>
-                <input type="text" name="buscar" placeholder="Buscar..">
+                <input class="buscar" type="text" name="buscar" placeholder="Buscar..">
             </div>
             <div>
                 <button type="submit" class="boton">
@@ -74,4 +74,5 @@
 
 </body>
 <script src="./js/lista-favoritos.js"></script>
+<script src="./js/formularios.js" ></script>
 </html>
