--- a/genres.html
+++ b/genres.html
@@ -21,7 +21,7 @@
         </h1>
         <form action="./search-results.html" method="GET" class="buscador">
             <div>
-                <input type="text" name="buscar" placeholder="Buscar..">
+                <input class="buscar" type="text" name="buscar" placeholder="Buscar..">
             </div>
             <div>
                 <button type="submit" class="boton">
@@ -91,6 +91,7 @@
             </ul>
         </section>
     </footer>
+    <script src="./js/formularios.js" ></script>
 
 
 </body>
