--- a/search-results.html
+++ b/search-results.html
@@ -71,6 +71,7 @@
         </section>
     </footer>
 <script src="./js/search-results.js"></script>
+<script src="./js/formularios.js" ></script>
 </body>
 
 </html>
