subo a repositorio por las dudas

--- a/detail-series.html
+++ b/detail-series.html
@@ -66,7 +66,7 @@
                 <h4 class="calificacion">Calificación:</h4>
                 <p class="puntuacion"></p>
                 <h4>
-                    <a class="generoSinSub" href="./genres.html">Género:</a>
+                    <a class="generoSinSub" id= "genero" href="./genres.html">Género:</a>
                 </h4>
                 <p class="puntuacion"><a href="./genres.html" id="genero" class="colorLetraGenero"></a></p>
                 <h4 class="estreno">Fecha de Estreno:</h4>
