terminando details y lista favoritos

--- a/favoritos.html
+++ b/favoritos.html
@@ -47,6 +47,12 @@
     <main>
         <h2 class="tituloinicial">FAVORITOS</h2>
         <h3 class="tituloinicial">Agregados Recientemente:</h3>
+        <section>
+            <h3 class="peliculasFavoritas">Peliculas Favoritas</h3>        
+        </section>
+        <section>
+            <h3 class="seriesFavoritas">Series Favoritas</h3>
+        </section> 
 
 
 
