--- a/detail-genres.html
+++ b/detail-genres.html
@@ -46,7 +46,7 @@
     <main>
         <h2 class="tituloinicial">GENEROS DE PELICULAS</h2>
         <section>
-            <h3 class="tituloinicial">ACCIÓN:</h3>
+            <h3 class="tituloGenero"></h3>
             <ul type="none" class="primerasection">
                 <li>
                     <a href="./detail-movie.html"> <img class="imagen" src="./img/batmanCabalero.png" alt="Foto de Batman: The Dark Knight"> </a>
@@ -62,107 +62,14 @@
                     </p>
                 </li>
                 <li>
-                    <a href="./img-series-nuevo/ironMan.jpg"> <img class="imagen" src="./img-series-nuevo/ironMan.jpg" alt="">Foto de Iron Man</a>
+                    <a href="./img-series-nuevo/ironMan.jpg"> <img class="imagen" src="./img-series-nuevo/ironMan.jpg" alt="Foto de Iron Man"></a>
                     <p class="tituoloprincipaldepelicula">
                         <a class="titulopelicula" href="./detail-movie.html">Iron Man</a>
                     </p>
                 </li>
             </ul>
         </section>
-        <section>
-            <h3 class="tituloinicial">CIENCIA FICCIÓN:</h3>
-            <ul type="none" class="primerasection">
-                <li>
-                    <a href="./detail-movie.html"> <img class="imagen" src="./img/suicideSquad.jpg" alt="Foto de The Suicide Squad"> </a>
-                    <p class="tituoloprincipaldepelicula">
-                        <a class="titulopelicula" href="./detail-movie.html">The Suicide Squad</a>
-                    </p>
-                </li>
-                <li>
-                    <a href="./detail-movie.html"> <img class="imagen" src="./img/venom.jpg" alt="Foto de Venom"> </a>
-                    <p class="tituoloprincipaldepelicula">
-                        <a class="titulopelicula" href="./detail-movie.html">Venom</a>
-                    </p>
-                </li>
-                <li>
-                    <a href="./detail-movie.html"> <img class="imagen" src="./img/justiceLeague.png" alt="Foto de Justice League"> </a>
-                    <p class="tituoloprincipaldepelicula">
-                        <a class="titulopelicula" href="./detail-movie.html">Justice League</a>
-                    </p>
-                </li>
-            </ul>
-        </section>
-        <section>
-            <h3 class="tituloinicial">FAMILIA:</h3>
-            <ul type="none" class="primerasection">
-                <li>
-                    <a href="./detail-movie.html"> <img class="imagen" src="./img/avengersEndgame.jpg" alt="Foto de Avengers:EndGame"> </a>
-                    <p class="tituoloprincipaldepelicula">
-                        <a class="titulopelicula" href="./detail-movie.html">Avengers:EndGame</a>
-                    </p>
-                </li>
-                <li>
-                    <a href="./detail-movie.html"> <img class="imagen" src="./img/spiderman.png" alt="Foto de Spiderman: Far From Home"> </a>
-                    <p class="tituoloprincipaldepelicula">
-                        <a class="titulopelicula" href="./detail-movie.html">Spiderman: Far From Home</a>
-                    </p>
-                </li>
-                <li>
-                    <a href="./detail-movie.html"> <img class="imagen" src="./img-series-nuevo/infinitywar.png" alt="Foto de Avengers: IninityWar">
-                    </a>
-                    <p class="tituoloprincipaldepelicula">
-                        <a class="titulopelicula" href="./detail-movie.html">Avengers: IninityWar</a>
-                    </p>
-                </li>
-            </ul>
-        </section>
-        <h2 class="tituloinicial">GENEROS DE SERIES</h2>
-        <section>
-            <h3 class="tituloinicial">ACCIÓN:</h3>
-            <ul type="none" class="primerasection">
-                <li>
-                    <a href="./detail-series.html"> <img class="imagen" src="./img-series/daredevil.jpg" alt="Foto de Daredevil">
-                        <p class="tituoloprincipaldepelicula">
-                            <a class="titulopelicula" href="./detail-series.html">Daredevil</a>
-                        </p>
-                </li>
-                <li>
-                    <a href="./detail-series.html"> <img class="imagen" src="./img-series/watchmen.png" alt="Foto de Watchmen">
-                    </a>
-                    <p class="tituoloprincipaldepelicula">
-                        <a class="titulopelicula" href="./detail-series.html">Watchmen</a>
-                    </p>
-                </li>
-                <li>
-                    <a href="./img-series-nuevo/ironMan.jpg"> <img class="imagen" src="./img-series/gotham.jpg" alt="Foto de Gotham"></a>
-                    <p class="tituoloprincipaldepelicula">
-                        <a class="titulopelicula" href=".">Gotham</a>
-                    </p>
-                </li>
-            </ul>
-        </section>
-        <section>
-            <h3 class="tituloinicial">CIENCIA FICCION:</h3>
-            <ul type="none" class="primerasection">
-                <li>
-                    <a href="./detail-series.html"> <img class="imagen" src="./img-series/titans.jpg" alt="Foto de Titans">
-                        <p class="tituoloprincipaldepelicula">
-                            <a class="titulopelicula" href="./detail-series.html">Titans</a>
-                        </p>
-                </li>
-            </ul>
-        </section>
-        <section>
-            <h3 class="tituloinicial">FAMILIA:</h3>
-            <ul type="none" class="primerasection">
-                <li>
-                    <a href="./detail-series.html"> <img class="imagen" src="./img-series/loki.jpg" alt="Foto de Loki">
-                        <p class="tituoloprincipaldepelicula">
-                            <a class="titulopelicula" href="./detail-series.html">Loki</a>
-                        </p>
-                </li>
-            </ul>
-        </section>
+        
     </main>
     <footer>
         <section>
@@ -183,6 +90,7 @@
         </section>
     </footer>
     <script src="./js/formularios.js" ></script>
+    <script src="./js/detail-genres.js"></script>
 </body>
 
 </html>
