Arreglos de Bonifacio

--- a/detail-genres.html
+++ b/detail-genres.html
@@ -11,9 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Bangers&family=Bebas+Neue&family=Commissioner:wght@100;500&family=Luckiest+Guy&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Bebas+Neue&family=Commissioner:wght@100;500&family=Luckiest+Guy&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -44,39 +42,43 @@
         </ul>
     </header>
     <main>
-        <h2 class="tituloinicial">GENEROS DE PELICULAS</h2>
+        <h2 class="titulos12" >GENEROS</h2>
         <section>
-            <h3 class="tituloGenero"></h3>
-            <ul type="none" class="primerasection">
+            <h3 class="titulos12">GENEROS DE PELICULAS</h3>
+            <ul type="none" class="flexboxgeneros"> 
                 <li>
-                    <a href="./detail-movie.html"> <img class="imagen" src="./img/batmanCabalero.png" alt="Foto de Batman: The Dark Knight"> </a>
-                    <p class="tituoloprincipaldepelicula">
-                        <a class="titulopelicula" href="./detail-movie.html">Batman: The Dark Knight</a>
-                    </p>
+                    <a href="./detail-genres.html" class="ButGen">CIENCIA FICCIÓN</a>
                 </li>
                 <li>
-                    <a href="./detail-movie.html"> <img class="imagen" src="./img-series-nuevo/deadPool.jpg" alt="Foto de Deadpol">
-                    </a>
-                    <p class="tituoloprincipaldepelicula">
-                        <a class="titulopelicula" href="./detail-movie.html">DeadPool</a>
-                    </p>
+                    <a href="./detail-genres.html" class="ButGen">ACCIÓN</a>
                 </li>
                 <li>
-                    <a href="./img-series-nuevo/ironMan.jpg"> <img class="imagen" src="./img-series-nuevo/ironMan.jpg" alt="Foto de Iron Man"></a>
-                    <p class="tituoloprincipaldepelicula">
-                        <a class="titulopelicula" href="./detail-movie.html">Iron Man</a>
-                    </p>
+                    <a href="./detail-genres.html" class="ButGen">FAMILIA</a>
                 </li>
             </ul>
         </section>
-        
+        <section>
+            <h3 class="titulos12">GENEROS DE SERIES</h3>
+            <ul type="none" class="flexboxgeneros">
+                <li>
+                    <a href="./detail-genres.html">CIENCIA FICCIÓN</a>
+                </li>
+                <li>
+                    <a href="./detail-genres.html">ACCIÓN</a>
+                </li>
+                <li>
+                    <a href="./detail-genres.html">FAMILIA</a>
+                </li>
+            </ul>
+        </section>
+
     </main>
     <footer>
         <section>
             <ul type="none" class="footer">
                 <li class="nombres">
                     <h4>Roberto Arellano</h4>
-                    <a class="gmail" href="mailto:rarellanochoque@udesa.edu.ar">rarellanoch@udesa.edu.ar</a>
+                    <a class="gmail" href="mailto:rarellanochoque@udes.edu.ar">rarellanochoque@udes.edu.ar</a>
                 </li>
                 <li class="nombres">
                     <h4>Martiniano Sanchez</h4>
@@ -91,6 +93,7 @@
     </footer>
     <script src="./js/formularios.js" ></script>
     <script src="./js/detail-genres.js"></script>
+
 </body>
 
 </html>
