Agregando detalles al footer

--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
     <footer>
         <section>
             <ul type="none" class="footer">
+                <li>
+                    <img class="imagen"  src="./img/logo.png" alt="">
+                </li>
                 <li class="nombres">
                     <h4>Roberto Arellano</h4>
                     <a class="gmail" href="mailto:rarellanochoque@udesa.edu.ar">rarellanoch@udesa.edu.ar</a>
