Arreglos al footer para presentacion

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <section>
             <ul type="none" class="footer">
                 <li>
-                    <img class="imagen"  src="./img/logo.png" alt="">
+                    <img class="imagenNuevo"  src="./img/logo.png" alt="">
                 </li>
                 <li class="nombres">
                     <h4>Roberto Arellano</h4>
